Что то получилось...
	modified:   index.html
	new file:   js/EventEmitter.js
	new file:   js/my.js

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
 	<title>Изучаем реакт</title>
-</head>
-<body>
-А тут будет текст, выводимый реактом
+	<script type="text/javascript" src="js/react/react.js"></script>
+	<script type="text/javascript" src="js/react/react-dom.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/EventEmmiter.js"></script>
+	<script type="text/javascript" src="js/browser.min.js"></script>
+	<script type="text/javascript" src="js/my.js"></script>
 
+</head>
+<body onload="fr()">
+А тут будет текст, выводимый реактом
+<div id="first"></div>
+<div id="first2"></div>
+<script type="text/javascript">
+	$("#first2").html('Вроде арбайтен');
+</script>
 </body>
 </html>
