Что то получилось! Гуд. Иде дальше.
	new file:   1/.gitignore
	new file:   1/README.md
	new file:   1/index.html
	new file:   1/js/app.js
	new file:   1/js/react/browser.min.js
	new file:   1/js/react/react-dom.js
	new file:   1/js/react/react.js
	new file:   1/package.json
	new file:   1/server.js
	modified:   index.html
	modified:   js/my.js

--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html>
 <head>
 	<title>Изучаем реакт</title>
+	<meta http-equiv="x-ua-compatible" content="EI=edge"/>
 	<script type="text/javascript" src="js/react/react.js"></script>
 	<script type="text/javascript" src="js/react/react-dom.js"></script>
 	<script type="text/javascript" src="js/browser.min.js"></script>
-	<script type="text/javascript" src="js/EventEmmiter.js"></script>
+
+	<script type="text/javascript" src="js/EventEmitter.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/my.js"></script>
+	
 
 </head>
-<body onload="fr()">
+<body onload="">
 А тут будет текст, выводимый реактом
 <div id="first"></div>
 <div id="first2"></div>
 <script type="text/javascript">
 	$("#first2").html('Вроде арбайтен');
 </script>
+<script type="text/babel" src="js/my.js"></script>
 </body>
 </html>
