--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
+п»ї<!DOCTYPE html>
 <html>
 <head>
-	<title>Изучаем реакт</title>
+	<title>РР·СѓС‡Р°РµРј СЂРµР°РєС‚</title>
+	 <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
 	<meta http-equiv="x-ua-compatible" content="EI=edge"/>
 	<script type="text/javascript" src="js/react/react.js"></script>
 	<script type="text/javascript" src="js/react/react-dom.js"></script>
@@ -13,11 +14,12 @@
 
 </head>
 <body onload="">
-А тут будет текст, выводимый реактом
+Рђ С‚СѓС‚ Р±СѓРґРµС‚ С‚РµРєСЃС‚, РІС‹РІРѕРґРёРјС‹Р№ СЂРµР°РєС‚РѕРј
 <div id="first"></div>
-<div id="first2"></div>
+<div id="first2"></div><hr>
+<div id="first3"></div>
 <script type="text/javascript">
-	$("#first2").html('Вроде арбайтен');
+	$("#first2").html('Р’СЂРѕРґРµ Р°СЂР±Р°Р№С‚РµРЅ');
 </script>
 <script type="text/babel" src="js/my.js"></script>
 </body>
