--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 	<script type="text/javascript" src="js/EventEmitter.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
-	
+	<style>
+		.none {
+		display: none !important;
+		}
+		.have {
+		color: red;
+		}
+	</style>
 
 </head>
 <body onload="">
