--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		.have {
 		color: red;
 		}
+		.appdet {
+			border: 1px;
+			border-style: solid;
+		}
 	</style>
 
 </head>
@@ -25,6 +29,8 @@
 <div id="first"></div>
 <div id="first2"></div><hr>
 <div id="first3"></div>
+<hr>
+<div id="first4"></div>
 <script type="text/javascript">
 	$("#first2").html('Вроде арбайтен');
 </script>
